# gr

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: config.rs  indent.rs  main.rs
src/candy/: Cargo.toml
src/candy/src/: asni_mods.rs  candy.rs  events.rs  lib.rs  line_editor.rs  selector.rs  str_tools.rs  symbols.rs
src/gr/: help.rs  init.rs  log.rs  merge.rs  mod.rs  move.rs  restack.rs  split.rs  submit.rs
src/gr-git/: Cargo.toml
src/gr-git/src/: branches.rs  exec_git.rs  lib.rs
src/gr-reviews/: Cargo.toml
src/gr-reviews/src/: code_review.rs  github.rs  lib.rs  merge_requests.rs  none.rs  review.rs
src/gr-reviews/src/github/: mod.rs  reviewer.rs
src/gr-tui/: Cargo.toml  README.md
src/gr-tui/src/: lib.rs  prompt.rs  select.rs  string_helpers.rs  symbols.rs  widget.rs
src/gr/log/: color_cycle.rs  log_tree.rs  tree.rs
