[package]
name = "stk"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0.86"

# Directory manipulation assistance
dirs = "5.0.1"

# Config file parsing
toml = "0.8.14"
serde = { version = "1.0.130", features = ["derive"] }

# Local crates
candy  = { path = "../candy" }
gr-git = { path = "src/gr-git" }
gr-reviews = { path = "src/gr-reviews" }

# Text colors
colored = "2.1.0"
# URL support
url = "2.5.2"
# Async engine
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.10.5"
itertools = "0.13.0"
log = "0.4.22"

