[package]
name = "gr-reviews"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
# Async trait support
async-trait = "0.1.81"

colored = "2.0.0"

itertools = "0.13.0"

# Local git crate
gr-git = { path = "../gr-git" }

# Github API support
# ...this is why we need async trait stuff. :(
octocrab= "0.38.0"
url = "2.5.2"
rand = "0.9.0-alpha.1"
serde = { version = "1.0.203", features = ["derive"] }
tokio = "1.38.0"
